--- a/lesson-1/base.html
+++ b/lesson-1/base.html
@@ -7,5 +7,12 @@
 </head>
 <body>
     <h1>hello world</h1>
+
+    <!-- adding js methods -->
+    <!-- <script>
+        alert('hellow');
+    </script> -->
+
+    <script src="sandBox.js"></script>
 </body>
-</html>
+</html> 
