--- a/lesson-1/base.html
+++ b/lesson-1/base.html
@@ -13,6 +13,6 @@
         alert('hellow');
     </script> -->
 
-    <script src="sandBox.js"></script>
+    <script src="templateStrings/tempstr.js"></script>
 </body>
 </html> 
