--- a/lesson-1/base.html
+++ b/lesson-1/base.html
@@ -13,6 +13,6 @@
         alert('hellow');
     </script> -->
 
-    <script src="boolean/boolean.js"></script>
+    <script src="type_comparison/type comparison.js"></script>
 </body>
 </html> 
