--- a/lession-2/base.html
+++ b/lession-2/base.html
@@ -13,6 +13,6 @@
         alert('hellow');
     </script> -->
 
-    <script src="conditions/logic_operations.js"></script>
+    <script src="conditions/logical_not.js"></script>
 </body>
 </html> 
