--- a/lession-3/base.html
+++ b/lession-3/base.html
@@ -8,6 +8,8 @@
 <body>
     <h1>hello world</h1>
 
+    <ul class="animals"></ul>
+
     <!-- adding js methods -->
     <!-- <script>
         alert('hellow');
