--- a/lession-5/base.html
+++ b/lession-5/base.html
@@ -17,6 +17,6 @@
         alert('hellow');
     </script> -->
 
-    <script src="object_literal.js"></script>
+    <script src="mathojects.js"></script>
 </body>
 </html> 
