--- a/lession-6/base.html
+++ b/lession-6/base.html
@@ -6,14 +6,14 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>hello world</h1>
+    <h1 id="title">hello world</h1>
 
     <ul class="animals"></ul>
 
 
     <div>
         <p>hello maina</p>
-        <p>just cheacking on you</p>
+        <p class="error">just cheacking on you</p>
         <p class="error">the message got an error</p>
     </div>
     <p class="about"></p>
