--- a/lession-6/base.html
+++ b/lession-6/base.html
@@ -16,7 +16,9 @@
         <p class="error">just cheacking on you</p>
         <p class="error">the message got an error</p>
     </div>
-    <p class="about"></p>
+    <div>
+        <p class="list">about div</p>
+    </div>
 
     <!-- adding js methods -->
     <!-- <script>
