getting and setting attribues

--- a/lession-6/base.html
+++ b/lession-6/base.html
@@ -20,6 +20,8 @@
         <p class="list">about div</p>
     </div>
 
+    <a href="https://web.facebook.com/">facebook.com</a>
+
     <!-- adding js methods -->
     <!-- <script>
         alert('hellow');
