--- a/lession-6/base.html
+++ b/lession-6/base.html
@@ -4,6 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        .error{
+            color: rgb(15, 128, 128);
+           
+        }
+        .success{
+            color: red;
+        }
+    </style>
 </head>
 <body>
     <h1 id="title">hello world</h1>
@@ -11,7 +20,7 @@
     <ul class="animals"></ul>
 
 
-    <div>
+    <div >
         <p>hello maina</p>
         <p class="error">just cheacking on you</p>
         <p class="error">the message got an error</p>
