--- a/lession-7/base.html
+++ b/lession-7/base.html
@@ -9,6 +9,7 @@
     <form class="form">
         <input type="text" name="username" id="username">
         <input type="submit" value="submit">
+        <div class="feedback"></div>
     </form>
     <script src="forms$events.js"></script>
 </body>
