--- a/lession-7/base.html
+++ b/lession-7/base.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+   <style>
+     .succuss{
+        border: 2px solid limegreen
+    }
+    .error{
+        border: 2px solid crimson
+    }
+   </style>
 </head>
 <body>
     <form class="form">
