--- a/lession-6/pop ups/base.html
+++ b/lession-6/pop ups/base.html
@@ -14,7 +14,7 @@
             <div class="popupcontent">
                 <h2>great sales</h2>
                 <p>great discount</p>
-                <a href="">get products</a>
+                <a href="">get <i class="fas fa-shekel-sign    "></i></a>
                 <div class="close-popup">X</div>
             </div>
 
